[workspace]
members = ["contracts/*", "packages/*"]

exclude = ["contracts/outpost-yieldaggregator-external-axelar", "contracts/outpost-nftbackedloan-axelar-external-evm", "contracts/strategy-evm-axelar-example", "packages/strategy-evm"]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false