[package]
name = "strategy-osmosis-atom-osmo"
version = "1.0.0"
authors = []
edition = "2018"
description = "Null"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw-utils = "0.13.4"
cw20 = "0.13.4"
cosmwasm-std = { version = "1.2.5", features = ["stargate"] }
cw-storage-plus = { version = "0.14.0" } 
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
protobuf = { version = "2", features = ["with-bytes"] }
prost = "0.11"
prost-types = "0.11"
strategy = { path = "../../packages/strategy" }
proto = { path = "../../packages/proto", features = ["cosmwasm"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
