[package]
name = "strategy-osmosis"
version = "1.0.0"
authors = []
edition = "2018"
description = "Null"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
bech32 = "0.9.0"
cw-utils = "1.0.1"
cw20 = "1.1.0"
cosmwasm-std = { version = "1.2.5", features = ["stargate"] }
cw-storage-plus = { version = "1.1.0" } 
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
protobuf = { version = "3.2.0", features = ["with-bytes"] }
prost = "0.11"
prost-types = "0.11"
strategy = { path = "../../packages/strategy" }
ununifi-msg = { path = "../../packages/ununifi-msg" }
strategy-osmosis-interface = {version = "1.0.0", path = "../../packages/strategy-osmosis-interface"}
proto = { path = "../../packages/proto", features = ["cosmwasm"] }
ica-tx = { path = "../../packages/ica-tx" }
osmosis-std	= { version = "0.16.1" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
